--- a/openapi/templates/schemas/types.ts.ejs
+++ b/openapi/templates/schemas/types.ts.ejs
@@ -18,7 +18,7 @@ import * as enums from './enums';
 <%
 Object.entries(openAPI.components.schemas).map(([key, value]) => {
   let required = value.required;
-  if (value.enum === undefined) {
+  if (value.enum === undefined && value.properties !== undefined) {
 -%>
 
 export interface <%= key %> {
@@ -39,3 +39,4 @@ export interface <%= key %> {
   }
 })
 -%>
+
